--- a/FullStackToAzure/appsettings.json
+++ b/FullStackToAzure/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=FullStackToAzure;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
